--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,9 @@
 	line-height: 1.75rem; /* 28px */
 	font-family: var(--font-primary);
 }
-html,
+html{
+	width: 100vw;
+}
 body {
 	height: 100vh;
 	width: 100vw;
@@ -243,6 +245,7 @@ nav :first-child {
 	}
 	.project-card {
 		width: 98%;
+		height: auto;
 	}
 	.project-desc {
 		text-align: left;
@@ -404,8 +407,10 @@ nav :first-child {
 }
 @media screen and (max-width: 700px) {
 	.about-contain1 {
+		width: 100vw;
 		gap: 3rem;
 		margin-top: 1.5rem;
+		justify-content: center;
 	}
 	.education-skill {
 		width: 100vw;
