--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,10 @@
 @import url('./varialbe.css');
+@import url('./navbar.css');
 @import url('./hamburgerMenu.css');
+@import url('./about.css');
+@import url('./project.css');
+@import url('./contact.css');
+@import url('./footer.css');
 * {
 	margin: 0;
 	padding: 0;
@@ -16,81 +21,10 @@ body {
 	width: 100vw;
 	overflow-x: hidden;
 	background: white;
-
 	color: var(--basic-color);
 }
 
-/* NAVBAR STYLE START */
-.nav-container {
-	position: fixed;
-	width: 100vw;
-	height: auto;
-	z-index: 5;
-	background: inherit;
-}
-nav {
-	display: flex;
-	align-items: center;
-	gap: 1.5rem;
-	padding: 1.5rem;
-	max-width: 1250px;
-	height: 60px;
-	margin: auto;
-	position: relative;
-	transition: 0.5s ease;
-}
-nav .logo {
-	cursor: pointer;
-	height: 50px;
-	width: 50px;
-	border-radius: 100%;
-	font-size: 0.7rem;
-	text-align: center;
-	align-content: center;
-	background: var(--primary-color);
-	color: white;
-	user-select: none;
-}
-nav :first-child {
-	margin-right: auto;
-}
-.nav-items {
-	display: flex;
-	gap: 1.5rem;
-	cursor: pointer;
-}
-.darkmode {
-	color: white;
-	background: black;
-}
-.active {
-	color: var(--primary-color);
-}
 
-@media screen and (max-width: 700px) {
-	.nav-items {
-		position: absolute;
-		right: 0px;
-		background: black;
-		color: white;
-		flex-direction: column;
-		width: 200px;
-		margin-top: 270px;
-		transition: transform 0.5s ease;
-		gap: 1rem;
-		padding: 0 1rem;
-		transform: translateX(100vw);
-	}
-
-	.sideNavActive {
-		/* right: 0px; */
-		transform: translateX(0vw);
-	}
-	.sideNavActive :hover {
-		color: var(--primary-color);
-	}
-}
-/* NAVBAR STYLE END */
 /* HOME SECTION STYLE */
 .home {
 	width: 100%;
@@ -152,381 +86,5 @@ nav :first-child {
 .hireme:hover {
 	border: 2px solid var(--primary-color);
 }
-/* RESPONSIVESESS */
-@media screen and (max-width: 600px) {
-	.home {
-		padding: 0 1rem;
-	}
-}
-/* PROJECT SECTION STYLE */
-.project {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-wrap: wrap;
-	gap: 1.5rem;
-	padding: 3rem 2rem;
-	transition: 0.5s ease;
-}
-.project-title {
-	font-size: var(--text-xl);
-	text-align: center;
-	/* line-height: 2.5rem; */
-}
-.project-desc {
-	color: var(--grey-text-color);
-	text-align: center;
-	margin-bottom: 3rem;
-}
-.project-card {
-	height: 430px;
-	width: 330px;
-	border-radius: 8px;
-	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	transition: 0.5s ease;
-	/* animation */
-}
-.cardDarkmode {
-	box-shadow: 0 4px 12px rgba(242, 236, 236, 0.1);
-}
-.projectCard-desc {
-	color: var(--grey-text-color);
-	padding-bottom: 0.9rem;
-}
-.projectCard-title {
-	font-size: 1.5rem; /* 24px */
-	padding: 2rem 0;
-	font-weight: 500;
-}
-.project-features {
-	list-style: none;
-	width: 100%;
-	padding: 0 0.5rem;
-	/* background: #d1d5db; */
-}
-.project-features li {
-	display: flex;
-	justify-content: start;
-	align-items: center;
-	margin-top: 2px;
-	gap: 1.5rem;
-	transition: 0.5s ease;
-}
-.doubleCheck {
-	height: 1.5rem;
-	width: 1.5rem;
-	display: inline-block;
-	user-select: none;
-	background: url('../img/doubleCheck.svg') no-repeat center center / cover;
-}
 
-.project-link-container a {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	gap: 0.5rem;
-	text-decoration: none;
-	color: var(--primary-color);
-	padding: 0.9rem 0;
-	margin-bottom: 0;
-}
-.project .link-icon {
-	height: 1.5rem;
-	width: 1.5rem;
-	display: inline-block;
-	background: url('../img/link.svg') no-repeat center center / cover;
-}
-@media screen and (max-width: 700px) {
-	.project {
-		height: auto;
-		width: 100vw;
-	}
-	.project-card {
-		width: 98%;
-		height: auto;
-	}
-	.project-desc {
-		text-align: left;
-		font-size: 1rem;
-	}
-}
-/* ABOUT SECTION STYLE */
-.about {
-	width: 100vw;
-	height: auto;
-	padding: 1rem;
-}
-.about-desc {
-	text-align: center;
-}
-.about-desc h2 {
-	font-size: 5rem;
-	line-height: 3.35rem;
-	letter-spacing: -10px;
-	font-family: ' Noto+Sans';
-}
-.about-desc p {
-	letter-spacing: 1.5rem;
-	margin-top: 1rem;
-}
-.about-contain {
-	width: 100%;
-	display: flex;
-	padding: 1rem;
-}
-.about-contain1 {
-	width: 400px;
-	display: flex;
-	flex-direction: column;
-	gap: 7rem;
-}
 
-.about-contain1 p {
-	width: 750px;
-	overflow-y: visible;
-	z-index: 2;
-}
-.about-contain1 .intro,
-.education-title {
-	color: var(--grey-text-color);
-	font-size: var(--text-small);
-	font-weight: 100;
-	width: 100%;
-	display: block;
-	letter-spacing: 0.2rem;
-	margin-bottom: 1rem;
-}
-.education-skill {
-	display: flex;
-	overflow-y: visible;
-	z-index: 2;
-	width: 100vw;
-}
-.about fieldset {
-	height: 6.5rem;
-	padding: 0.5rem;
-	margin: 0.3rem;
-	align-content: center;
-	border: 0.5px solid var(--primary-color);
-	border-radius: 8px;
-	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-	width: 35vw;
-}
-.education legend {
-	height: 1.5rem;
-	width: 1.5rem;
-	display: inline-block;
-	margin: 0 0.5rem;
-	background: url('../img/education.svg') no-repeat center center / cover;
-}
-.about fieldset h3 {
-	font-size: var(--text-base);
-	font-weight: unset;
-	line-height: 1.3rem;
-}
-.about fieldset span {
-	font-size: var(--text-small);
-}
-
-.skills-contain {
-	width: 100%;
-	display: flex;
-	justify-content: space-around;
-	gap: 1.5rem;
-	flex-wrap: wrap;
-	margin: 1px;
-}
-.skills-contain .title {
-	width: 100%;
-	height: 50px;
-	text-align: center;
-	color: var(--grey-text-color);
-	font-size: var(--text-small);
-	font-weight: 100;
-	display: block;
-	letter-spacing: 0.2rem;
-	margin-bottom: 1rem;
-}
-.skill-div {
-	display: block;
-	text-align: center;
-	width: 40%;
-	height: 100px;
-
-	margin: 0.3rem 0;
-}
-.skill-div p {
-	/* background-color: pink; */
-	width: 100%;
-	padding: 0.3rem;
-}
-.skill-div img {
-	border: none !important;
-	outline: none !important;
-	border-width: 0;
-	height: 0.9rem;
-	width: 0.9rem;
-	padding: 15px;
-	margin: 2px;
-}
-.star {
-	background: url('../img/star.svg') no-repeat center center / cover;
-}
-.starfull {
-	background: url('../img/starfill.svg') no-repeat center center / cover;
-}
-.starhalf {
-	background: url('../img/starhalf.svg') no-repeat center center / cover;
-}
-.about-contain2 {
-	width: calc(100%);
-	height: auto;
-	background: #eeeee448;
-	z-index: -3;
-}
-@media screen and (max-width: 1000px) {
-	.about-contain1 {
-		width: 100%;
-	}
-	.about-contain1 p {
-		width: 100%;
-	}
-	.education-skill {
-		flex-direction: column;
-		gap: 5rem;
-		padding: 0 1rem;
-	}
-	.skills-contain .title {
-		text-align: unset;
-	}
-	.about fieldset {
-		width: 90%;
-	}
-}
-@media screen and (max-width: 700px) {
-	.about-contain1 {
-		width: 100vw;
-		gap: 3rem;
-		margin-top: 1.5rem;
-		justify-content: center;
-	}
-	.about p {
-		font-size: 1rem;
-	}
-	.education-skill {
-		width: 100vw;
-		gap: 3rem;
-	}
-	.education,
-	.education fieldset {
-		width: 98%;
-	}
-	.skill-div {
-		margin-bottom: 1.5rem;
-	}
-}
-/* CONTACT STYLE */
-.contact {
-	width: 100vw;
-	height: 100vh;
-	display: flex;
-	padding: 1rem;
-	justify-content: space-around;
-}
-.contact .title {
-	font-size: 5rem;
-	line-height: 3.35rem;
-	letter-spacing: -10px;
-	font-family: ' Noto+Sans';
-	font-weight: 600;
-}
-
-.contact-form {
-	width: 50%;
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-}
-.contact-form input,
-.contact-form textarea,
-.contact-form select {
-	display: block;
-	width: 100%;
-	height: 2.1rem;
-	padding: 0.25rem 0.5rem;
-	margin-top: 0.5rem;
-	border: 1px solid #d1d5db; /* Tailwind's border color */
-	border-radius: 0.375rem; /* Tailwind's rounded-md class */
-	transition: border-color 0.3s ease;
-	user-select: none;
-	font-size: 1rem;
-}
-.contact-form label {
-	display: block;
-	margin-top: 0.7rem;
-	margin-bottom: 0.3rem;
-	color: red;
-}
-.contact-form input:focus {
-	outline: none;
-	border-color: #2563eb;
-	box-shadow: 0 0 0 0.1rem rgba(66, 153, 225, 0.5);
-}
-.contact-form textarea {
-	height: 7.7rem;
-}
-.contact-form button {
-	display: inline-block;
-	width: 100%;
-	padding: 0.25rem;
-	margin-top: 0.7rem;
-	border: none;
-	border-radius: 0.375rem;
-	cursor: pointer;
-	transition: background-color 0.3s ease;
-}
-.contact-form button:hover {
-	background-color: var(--primary-color);
-	color: white;
-	outline: none;
-}
-.contact-form textarea:focus {
-	outline: none;
-}
-@media screen and (max-width: 1000px) {
-	.contact {
-		flex-direction: column;
-		height: auto;
-	}
-	.contact-form {
-		width: 80%;
-		margin: auto;
-		padding: 3rem 0;
-	}
-}
-@media screen and (max-width: 600px) {
-	.contact-form {
-		width: 100%;
-	}
-}
-/* FOOTER SECTION STYLING */
-footer {
-	text-align: center;
-	padding: 1rem;
-}
-footer img {
-	height: 1.3rem;
-	width: 1.3rem;
-	margin: 0.3rem;
-}
-hr {
-	width: 90%;
-	margin: auto;
-}
-footer p {
-	font-size: var(--text-small);
-	color: var(--grey-text-color);
-}
