--- a/css/about.css
+++ b/css/about.css
@@ -165,7 +165,8 @@
 	}
 	.about p {
 		font-size: 1rem;
-            width: 95%;
+            width: 99%;
+			padding-right:1px ;
 	}
 	.education-skill {
 		width: 100vw;
