--- a/css/about.css
+++ b/css/about.css
@@ -3,7 +3,7 @@
 	width: 100vw;
 	height: auto;
 	padding: 1rem;
-    overflow-x: hidden;
+	overflow-x: hidden;
 }
 .about-desc {
 	text-align: center;
@@ -46,15 +46,15 @@
 }
 .education-skill {
 	display: flex;
-	overflow-X: hidden;
+	overflow-x: hidden;
 	z-index: 2;
-	width: 100VW;
+	width: 100vw;
 }
 
 .about fieldset {
 	height: 6.5rem;
 	padding: 0.5rem;
-	margin: 0.3rem ;
+	margin: 0.3rem;
 	align-content: center;
 	border: 0.5px solid var(--primary-color);
 	border-radius: 8px;
@@ -137,17 +137,16 @@
 		width: 100%;
 	}
 	.about-contain2 {
-		display: none;;
+		display: none;
 	}
 	.about-contain1 p {
 		width: 90%;
 	}
 	.education-skill {
 		flex-direction: column;
-        overflow-x: hidden;
+		overflow-x: hidden;
 		gap: 5rem;
-		padding-right:1.1rem;
-
+		padding-right: 1.1rem;
 	}
 	.skills-contain .title {
 		text-align: unset;
@@ -165,8 +164,7 @@
 	}
 	.about p {
 		font-size: 1rem;
-            width: 99%;
-			padding-right:1px ;
+		width: 94%;
 	}
 	.education-skill {
 		width: 100vw;
