--- a/css/project.css
+++ b/css/project.css
@@ -7,7 +7,7 @@
 	align-items: center;
 	flex-wrap: wrap;
 	gap: 1.5rem;
-	padding: 3rem 2rem;
+	padding: 3rem;
 	transition: 0.5s ease;
 }
 .project-title {
