--- a/css/about.css
+++ b/css/about.css
@@ -169,6 +169,9 @@
 	}
 	.about-desc p{
 		letter-spacing: 1rem;
+		width: 100vw;
+		text-align: center;
+		background: red;
 	}
 	.education-skill {
 		width: 100vw;
